src/objects/Customer_Love__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Pulse</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Are_we_actively_engaged_with_BDM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are we actively engaged with BDM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Indication__c</fullName>
        <label>Budget Indication</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Decision Maker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Customer_Pulse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coursera_Exec_Sponsor__c</fullName>
        <label>Coursera Exec Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Rick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nikhil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Julia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raghav</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Use_Case__c</fullName>
        <label>Customer Use Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Champion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Love (Deal Champion)</relationshipLabel>
        <relationshipName>Customer_Love_where_Deal_Champion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Love (Decision Maker)</relationshipLabel>
        <relationshipName>Customer_Love_Decision_Maker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Details__c</fullName>
        <label>Implementation Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Experience__c</fullName>
        <label>Implementation Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not so good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L_D_Landscape__c</fullName>
        <label>Initiative Driven By</label>
        <picklist>
            <picklistValues>
                <fullName>Matured L&amp;D Org</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Immature L&amp;D Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departmental/Functional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Priorities__c</fullName>
        <inlineHelpText>Please specify list of top priorities</inlineHelpText>
        <label>Top Priorities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Customer Love</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Customer Love Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Love</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>